--- a/pynb/w5-6/nb.ipynb
+++ b/pynb/w5-6/nb.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "source": [
     "week5 objectives:\n",
-    "1. explore UCLA NewsScape data\n",
-    "2. set keywords for a topic: climate change, gun control, immigration\n",
-    "3. fetch query results; channels: CNN, FNC, MSNBC\n",
-    "4. identify cues to segment a broadcast\n",
-    "5. validate segments contextually\n"
+    "\n",
+    "1. set keywords for topics: climate change, gun control, immigration\n",
+    "2. fetch query results from news-scape for channels: CNN, FNC, MSNBC\n",
+    "3. identify cues to segment a broadcast into stories\n",
+    "4. validate segments contextually\n"
    ]
   },
   {
@@ -260,6 +260,37 @@
    ],
    "source": [
     "data[0]['trs']  # not related to climate change"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "main: fetch news broadcast videos meta data for climate change with set keywords for news channels: CNN, FNC and MSNBC. Segment broadcasts to stories based on cues and validate contextually.\n",
+    "\n",
+    "observation: on manual validation, many segments don't align contextually with the topic(climate change). This data can't be used for validation of the topic detection pipeline, the aim was to have unseen data for the final pipeline"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "week6 objectives:\n",
+    "\n",
+    "1. search for multimodal datasets around emotion, sentiment and stance\n",
+    "2. literature review\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "no multimodal dataset in news broadcast domain with stance labels is available.\n",
+    "\n",
+    "multimodal datasets consisting youtube video creators with emotion and sentiment labels are available, without a multimodal dataset with stance labels it is not possible to train a framework"
    ]
   },
   {
