--- a/pynb/w10-11/nb.ipynb
+++ b/pynb/w10-11/nb.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,12 +252,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13477, 10000) (13477, 2855)\n"
+      "(13477, 10000) (13477, 2786)\n"
      ]
     }
    ],
    "source": [
-    "vectorizer = CountVectorizer(max_features=10000)\n",
+    "vectorizer = CountVectorizer(max_features=10000, stop_words='english')\n",
     "X1 = vectorizer.fit_transform(comments)\n",
     "X2 = vectorizer.fit_transform(topics)\n",
     "\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -387,14 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.576438848920866\n"
+      "56.969424460431654\n"
      ]
     }
    ],
