--- a/pynb/w9/nb.ipynb
+++ b/pynb/w9/nb.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "(1152, 30)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,29 +216,21 @@
        "['neutral', 'calm', 'happy', 'sad', 'angry', 'fearful', 'disgust', 'surprised']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label_map = {\n",
-    "    1: \"neutral\", \n",
-    "    2: \"calm\", \n",
-    "    3: \"happy\", \n",
-    "    4: \"sad\", \n",
-    "    5: \"angry\", \n",
-    "    6: \"fearful\", \n",
-    "    7: \"disgust\", \n",
-    "    8: \"surprised\"\n",
-    "    }\n",
+    "labels = {1: \"neutral\", 2: \"calm\", 3: \"happy\", 4: \"sad\", 5: \"angry\", 6: \"fearful\", 7: \"disgust\", 8: \"surprised\"}\n",
     "\n",
-    "list(label_map.values())"
+    "\n",
+    "list(labels.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,12 +256,12 @@
     "ax.set_xlabel(\"Predicted\"); ax.set_ylabel(\"True\"); \n",
     "\n",
     "ax.set_title(\"Confusion Matrix\"); \n",
-    "ax.xaxis.set_ticklabels(list(label_map.values()), rotation=45); ax.yaxis.set_ticklabels(list(label_map.values()), rotation=45);"
+    "ax.xaxis.set_ticklabels(list(labels.values()), rotation=45); ax.yaxis.set_ticklabels(list(labels.values()), rotation=45);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,29 +304,19 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test, predictions, target_names=list(label_map.values())))"
+    "print(classification_report(y_test, predictions, target_names=list(labels.values())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['svc.p']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import joblib\n",
+    "import pickle\n",
     "\n",
-    "joblib.dump(gs, \"svc.p\")"
+    "with open('svc.p', 'wb') as f:\n",
+    "    pickle.dump(gs, f)\n"
    ]
   },
   {
